--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ProfileFragment"
-    >
+    tools:context=".ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
@@ -40,57 +39,80 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_gravity="center"
+            android:id="@+id/avatarImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/person"
-            android:id="@+id/avatarImage"/>
+            android:layout_gravity="center"
+            android:src="@drawable/person" />
+
+        <TextView
+            android:id="@+id/usernameProfileFm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Username"
+            android:textSize="30sp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_margin="15dp"
-        >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ems="4"
+                android:fontFamily="@font/quicksand_book"
                 android:text="Email:"
-                android:textSize="25sp"
-                android:fontFamily="@font/quicksand_bold"
-                android:ems="4"/>
+                android:textSize="20sp" />
+
             <TextView
+                android:id="@+id/emailProfileFm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
-                android:fontFamily="@font/quicksand_bold"
-                android:id="@+id/emailProfileFm"/>
+                android:fontFamily="@font/quicksand_book"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ems="4"
+                android:fontFamily="@font/quicksand_book"
                 android:text="Depart:"
-                android:textSize="25sp"
-                android:fontFamily="@font/quicksand_bold"
-                android:ems="4"/>
+                android:textSize="20sp" />
+
             <TextView
+                android:id="@+id/departProfileFm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
-                android:fontFamily="@font/quicksand_bold"
-                android:id="@+id/departProfileFm"/>
+                android:fontFamily="@font/quicksand_book"
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="15dp"
+        android:background="@color/blue"
+        android:text="LOGOUT"
+        android:textColor="@color/white" />
+
 
 </LinearLayout>
