--- a/app/src/main/res/layout/fragment_select_department.xml
+++ b/app/src/main/res/layout/fragment_select_department.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BeginActivity">
+    tools:context=".model.SelectDepartmentFragment">
+
+    <!-- TODO: Update blank fragment layout -->
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView_Department"
+        android:id="@+id/listView_Department_FM"
         >
     </ListView>
 
-</LinearLayout>
+</FrameLayout>
