--- a/app/src/main/res/layout/fragment_learn_vocabulary.xml
+++ b/app/src/main/res/layout/fragment_learn_vocabulary.xml
@@ -10,13 +10,25 @@
     android:padding="40dp"
     tools:context=".LearnVocabulary">
 
-    <TextView
-        android:id="@+id/txtLearnedWords"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Learned words: "
-        android:textColor="@color/blue"
-        android:textSize="25sp" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Learned words: "
+            android:textColor="@color/blue"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/txtLearnedWords"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/blue"
+            android:textSize="25sp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="3"
+            android:layout_weight="4"
             android:checkable="true"
             android:clickable="true"
             android:focusable="true"
@@ -55,6 +67,16 @@
                     android:textSize="25sp" />
 
                 <TextView
+                    android:id="@+id/vocabularyType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="/noun/"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <TextView
                     android:id="@+id/meaning"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -77,6 +99,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:paddingHorizontal="20dp"
-        android:text="I remembered"/>
+        android:text="I remembered it" />
 
 </LinearLayout>
